#6073: Fix sflphone-plugins package build

--- a/tools/build-system/launchpad/sflphone-plugins/debian/changelog
+++ b/tools/build-system/launchpad/sflphone-plugins/debian/changelog
@@ -1,4 +1,4 @@
-sflphone-client-gnome (0.9.7~rc1~ppa1~SYSTEM) SYSTEM; urgency=low
+sflphone-plugins (0.9.7~rc1~ppa1~SYSTEM) SYSTEM; urgency=low
 
     ** 0.9.7~rc1~ppa1~SYSTEM **
 
@@ -157,7 +157,7 @@ sflphone-client-gnome (0.9.7~rc1~ppa1~SYSTEM) SYSTEM; urgency=low
 
  -- Julien Bonjean <julien.bonjean@savoirfairelinux.com>  Fri, 20 Nov 2009 13:59:02 -0500
 
-sflphone-client-gnome (0.9.7~beta~ppa1~SYSTEM) SYSTEM; urgency=low
+sflphone-plugins (0.9.7~beta~ppa1~SYSTEM) SYSTEM; urgency=low
 
     ** 0.9.7~beta~ppa1~SYSTEM **
 
@@ -726,7 +726,7 @@ sflphone-client-gnome (0.9.7~beta~ppa1~SYSTEM) SYSTEM; urgency=low
 
  -- Julien Bonjean <julien.bonjean@savoirfairelinux.com>  Fri, 06 Nov 2009 11:20:01 -0500
 
-sflphone-client-gnome (0.9.6-SYSTEM) SYSTEM; urgency=low
+sflphone-plugins (0.9.6-SYSTEM) SYSTEM; urgency=low
 
     ** 0.9.6 **
 
@@ -793,7 +793,7 @@ sflphone-client-gnome (0.9.6-SYSTEM) SYSTEM; urgency=low
 
  -- SFLphone Automatic Build System <team@sflphone.org>  Mon, 27 Jul 2009 09:53:19 -0400
 
-sflphone-client-gnome (0.9.6~rc2-SYSTEM) SYSTEM; urgency=low
+sflphone-plugins (0.9.6~rc2-SYSTEM) SYSTEM; urgency=low
 
     ** 0.9.6~rc2 **
 
@@ -848,7 +848,7 @@ sflphone-client-gnome (0.9.6~rc2-SYSTEM) SYSTEM; urgency=low
 
  -- SFLphone Automatic Build System <team@sflphone.org>  Fri, 17 Jul 2009 19:12:58 -0400
 
-sflphone-client-gnome (0.9.6~rc1-SYSTEM) SYSTEM; urgency=low
+sflphone-plugins (0.9.6~rc1-SYSTEM) SYSTEM; urgency=low
 
     ** 0.9.6~rc1 **
 
@@ -956,7 +956,7 @@ sflphone-client-gnome (0.9.6~rc1-SYSTEM) SYSTEM; urgency=low
 
  -- SFLphone Automatic Build System <team@sflphone.org>  Fri, 10 Jul 2009 15:50:26 -0400
 
-sflphone-client-gnome (0.9.6~beta-SYSTEM) SYSTEM; urgency=low
+sflphone-plugins (0.9.6~beta-SYSTEM) SYSTEM; urgency=low
 
     ** 0.9.6~beta **
 
@@ -1251,7 +1251,7 @@ sflphone-client-gnome (0.9.6~beta-SYSTEM) SYSTEM; urgency=low
 
  -- SFLphone Automatic Build System <team@sflphone.org>  Tue, 23 Jun 2009 11:13:42 -0400
 
-sflphone-client-gnome (0.9.5-SYSTEM) SYSTEM; urgency=low
+sflphone-plugins (0.9.5-SYSTEM) SYSTEM; urgency=low
 
     ** 0.9.5 release **
 
@@ -1282,7 +1282,7 @@ sflphone-client-gnome (0.9.5-SYSTEM) SYSTEM; urgency=low
 
  -- SFLphone Automatic Build System <team@sflphone.org>  Mon, 25 May 2009 11:34:48 -0400
 
-sflphone-client-gnome (0.9.5-SYSTEM~rc2) SYSTEM; urgency=low
+sflphone-plugins (0.9.5-SYSTEM~rc2) SYSTEM; urgency=low
 
     ** 0.9.5 rc2 **
 
@@ -1336,7 +1336,7 @@ sflphone-client-gnome (0.9.5-SYSTEM~rc2) SYSTEM; urgency=low
 
  -- SFLphone Automatic Build System <team@sflphone.org>  Tue, 19 May 2009 12:08:18 -0400
 
-sflphone-client-gnome (0.9.5-0ubuntu1~rc1) SYSTEM; urgency=low
+sflphone-plugins (0.9.5-0ubuntu1~rc1) SYSTEM; urgency=low
 
   [ SFLphone Project ]
   * [#1262] Updated changelogs for version 0.9.5-0ubuntu1 Snapshot 2009-
@@ -1365,7 +1365,7 @@ sflphone-client-gnome (0.9.5-0ubuntu1~rc1) SYSTEM; urgency=low
 
  -- Sflphone Project <sflphone@mtl.savoirfairelinux.net>  Tue, 05 May 2009 19:16:13 -0400
 
-sflphone-client-gnome (0.9.5-0ubuntu1~beta) SYSTEM; urgency=low
+sflphone-plugins (0.9.5-0ubuntu1~beta) SYSTEM; urgency=low
 
   [ Julien Bonjean ]
   * Updated Eclipse stuff
@@ -1587,7 +1587,7 @@ sflphone-client-gnome (0.9.5-0ubuntu1~beta) SYSTEM; urgency=low
 
  -- Sflphone Project <sflphone@mtl.savoirfairelinux.net>  Mon, 27 Apr 2009 17:00:03 -0400
 
-sflphone-client-gnome (0.9.4-0ubuntu2) SYSTEM; urgency=low
+sflphone-plugins (0.9.4-0ubuntu2) SYSTEM; urgency=low
 
   [ Alexandre Savard ]
   * Restore speex and GSM detection
