--- a/lang/te.po
+++ b/lang/te.po
@@ -1,31 +1,32 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Telugu translation for sflphone
+# Copyright (c) 2011 Rosetta Contributors and Canonical Ltd 2011
+# This file is distributed under the same license as the sflphone package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2011.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: sflphone\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-09-27 16:04-0400\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2011-03-07 16:09+0000\n"
+"Last-Translator: వీవెన్ (Veeven) <Unknown>\n"
+"Language-Team: Telugu <te@li.org>\n"
+"Language: te\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Launchpad-Export-Date: 2011-04-01 12:40+0000\n"
+"X-Generator: Launchpad (build 12710)\n"
 
 #: ../gnome/src/config/audioconf.c:682
 #: ../gnome/src/config/addressbook-config.c:423
 msgid "Name"
-msgstr ""
+msgstr "పేరు"
 
 #: ../gnome/src/config/audioconf.c:687
 msgid "Frequency"
-msgstr ""
+msgstr "తరచుదనం"
 
 #: ../gnome/src/config/audioconf.c:692
 msgid "Bitrate"
@@ -61,7 +62,7 @@ msgstr ""
 
 #: ../gnome/src/config/audioconf.c:974
 msgid "ALSA settings"
-msgstr ""
+msgstr "ALSA అమరికలు"
 
 #: ../gnome/src/config/audioconf.c:994
 msgid "Recordings"
@@ -69,11 +70,11 @@ msgstr ""
 
 #: ../gnome/src/config/audioconf.c:998
 msgid "Destination folder"
-msgstr ""
+msgstr "గమ్యస్థాన సంచయం"
 
 #: ../gnome/src/config/audioconf.c:1002
 msgid "Select a folder"
-msgstr ""
+msgstr "ఒక సంచయాన్ని ఎంచుకోండి"
 
 #: ../gnome/src/config/audioconf.c:1012
 msgid "_Always recording"
@@ -104,19 +105,19 @@ msgstr ""
 
 #: ../gnome/src/config/assistant.c:81
 msgid "Alias"
-msgstr ""
+msgstr "మారుపేరు"
 
 #: ../gnome/src/config/assistant.c:85
 msgid "Server"
-msgstr ""
+msgstr "సేవిక"
 
 #: ../gnome/src/config/assistant.c:89
 msgid "Username"
-msgstr ""
+msgstr "వాడుకరిపేరు"
 
 #: ../gnome/src/config/assistant.c:93
 msgid "Security: "
-msgstr ""
+msgstr "భద్రత: "
 
 #: ../gnome/src/config/assistant.c:96
 msgid "SRTP/ZRTP draft-zimmermann"
@@ -144,7 +145,7 @@ msgstr ""
 
 #: ../gnome/src/config/assistant.c:288
 msgid "Select an account type"
-msgstr ""
+msgstr "ఖాతా రకాన్ని ఎంచుకోండి"
 
 #: ../gnome/src/config/assistant.c:290
 msgid "SIP (Session Initiation Protocol)"
@@ -156,7 +157,7 @@ msgstr ""
 
 #: ../gnome/src/config/assistant.c:307
 msgid "Account"
-msgstr ""
+msgstr "ఖాతా"
 
 #: ../gnome/src/config/assistant.c:307
 msgid "Please select one of the following options"
@@ -183,7 +184,7 @@ msgstr ""
 #: ../gnome/src/config/assistant.c:333 ../gnome/src/config/assistant.c:433
 #: ../gnome/src/config/accountconfigdialog.c:250
 msgid "_Alias"
-msgstr ""
+msgstr "మారుపేరు (_A)"
 
 #: ../gnome/src/config/assistant.c:341 ../gnome/src/config/assistant.c:441
 #: ../gnome/src/config/accountconfigdialog.c:288
@@ -198,12 +199,12 @@ msgstr ""
 #: ../gnome/src/config/assistant.c:359 ../gnome/src/config/assistant.c:458
 #: ../gnome/src/config/accountconfigdialog.c:312
 msgid "_Password"
-msgstr ""
+msgstr "సంకేతపదం (_P)"
 
 #: ../gnome/src/config/assistant.c:368 ../gnome/src/config/assistant.c:467
 #: ../gnome/src/config/accountconfigdialog.c:328
 msgid "Show password"
-msgstr ""
+msgstr "సంకేతపదాన్ని చూపించు"
 
 #: ../gnome/src/config/assistant.c:373 ../gnome/src/config/assistant.c:472
 #: ../gnome/src/config/accountconfigdialog.c:342
@@ -248,11 +249,11 @@ msgstr ""
 
 #: ../gnome/src/config/assistant.c:522
 msgid "Account Registration"
-msgstr ""
+msgstr "ఖాతా నమోదు"
 
 #: ../gnome/src/config/assistant.c:522
 msgid "Congratulations!"
-msgstr ""
+msgstr "అభినందనలు!"
 
 #: ../gnome/src/config/hooks-config.c:149
 msgid "URL Argument"
@@ -316,7 +317,7 @@ msgstr ""
 
 #: ../gnome/src/config/preferencesdialog.c:264
 msgid "days"
-msgstr ""
+msgstr "రోజులు"
 
 #: ../gnome/src/config/preferencesdialog.c:269
 msgid "Instant Messaging"
@@ -328,14 +329,14 @@ msgstr ""
 
 #: ../gnome/src/config/preferencesdialog.c:357
 msgid "Preferences"
-msgstr ""
+msgstr "అభీష్టాలు"
 
 #: ../gnome/src/config/preferencesdialog.c:395
 #: ../gnome/src/config/preferencesdialog.c:441
 #: ../gnome/src/config/addressbook-config.c:328
 #: ../gnome/src/config/shortcuts-config.c:129
 msgid "General"
-msgstr ""
+msgstr "సాధారణ"
 
 #: ../gnome/src/config/preferencesdialog.c:400
 #: ../gnome/src/config/preferencesdialog.c:442
@@ -361,7 +362,7 @@ msgstr ""
 
 #: ../gnome/src/config/zrtpadvanceddialog.c:51
 msgid "ZRTP Options"
-msgstr ""
+msgstr "ZRTP ఎంపికలు"
 
 #: ../gnome/src/config/zrtpadvanceddialog.c:70
 msgid "Send Hello Hash in S_DP"
@@ -381,7 +382,7 @@ msgstr ""
 
 #: ../gnome/src/config/zrtpadvanceddialog.c:123
 msgid "SDES Options"
-msgstr ""
+msgstr "SDES ఎంపికలు"
 
 #: ../gnome/src/config/zrtpadvanceddialog.c:141
 msgid "Fallback on RTP on SDES failure"
@@ -394,15 +395,15 @@ msgstr ""
 
 #: ../gnome/src/config/accountlistconfigdialog.c:495
 msgid "Protocol"
-msgstr ""
+msgstr "ప్రొటోకాల్"
 
 #: ../gnome/src/config/accountlistconfigdialog.c:503
 msgid "Status"
-msgstr ""
+msgstr "స్థితి"
 
 #: ../gnome/src/config/accountlistconfigdialog.c:585
 msgid "Accounts"
-msgstr ""
+msgstr "ఖాతాలు"
 
 #: ../gnome/src/config/accountlistconfigdialog.c:594
 msgid "Configured Accounts"
@@ -445,7 +446,7 @@ msgstr ""
 
 #: ../gnome/src/config/addressbook-config.c:373
 msgid "_Home"
-msgstr ""
+msgstr "ముంగిలి (_H)"
 
 #: ../gnome/src/config/addressbook-config.c:379
 msgid "_Mobile"
@@ -538,7 +539,7 @@ msgstr ""
 
 #: ../gnome/src/config/accountconfigdialog.c:237
 msgid "Account Parameters"
-msgstr ""
+msgstr "ఖాతా పరామితులు"
 
 #: ../gnome/src/config/accountconfigdialog.c:259
 msgid "_Protocol"
@@ -558,11 +559,11 @@ msgstr ""
 
 #: ../gnome/src/config/accountconfigdialog.c:411
 msgid "Authentication"
-msgstr ""
+msgstr "అధీకరణ"
 
 #: ../gnome/src/config/accountconfigdialog.c:412
 msgid "Secret"
-msgstr ""
+msgstr "రహస్యం"
 
 #: ../gnome/src/config/accountconfigdialog.c:654
 msgid "Credential"
@@ -574,12 +575,12 @@ msgstr ""
 
 #: ../gnome/src/config/accountconfigdialog.c:699
 msgid "Password"
-msgstr ""
+msgstr "సంకేతపదం"
 
 #: ../gnome/src/config/accountconfigdialog.c:761
 #: ../gnome/src/config/accountconfigdialog.c:1271
 msgid "Security"
-msgstr ""
+msgstr "భద్రత"
 
 #: ../gnome/src/config/accountconfigdialog.c:772
 msgid "Use TLS transport(sips)"
@@ -595,7 +596,7 @@ msgstr ""
 
 #: ../gnome/src/config/accountconfigdialog.c:848
 msgid "Registration"
-msgstr ""
+msgstr "నమోదు"
 
 #: ../gnome/src/config/accountconfigdialog.c:852
 msgid "Registration expire"
@@ -611,7 +612,7 @@ msgstr ""
 
 #: ../gnome/src/config/accountconfigdialog.c:894
 msgid "Local address"
-msgstr ""
+msgstr "స్థానిక చిరునామా"
 
 #: ../gnome/src/config/accountconfigdialog.c:953
 msgid "Local port"
@@ -679,15 +680,15 @@ msgstr ""
 
 #: ../gnome/src/config/accountconfigdialog.c:1224
 msgid "Account settings"
-msgstr ""
+msgstr "ఖాతా అమరికలు"
 
 #: ../gnome/src/config/accountconfigdialog.c:1244
 msgid "Basic"
-msgstr ""
+msgstr "ప్రాధమిక"
 
 #: ../gnome/src/config/accountconfigdialog.c:1266
 msgid "Advanced"
-msgstr ""
+msgstr "ఉన్నత"
 
 #: ../gnome/src/config/accountconfigdialog.c:1278
 msgid "Network"
@@ -720,11 +721,11 @@ msgstr ""
 
 #: ../gnome/src/callable_obj.c:310
 msgid "today at %R"
-msgstr ""
+msgstr "ఈరోజు %Rకి"
 
 #: ../gnome/src/callable_obj.c:313
 msgid "yesterday at %R"
-msgstr ""
+msgstr "నిన్న %Rకి"
 
 #: ../gnome/src/callable_obj.c:315
 msgid "%A at %R"
@@ -742,7 +743,7 @@ msgstr ""
 #: ../gnome/src/sflnotify.c:98 ../gnome/src/sflnotify.c:115
 #, c-format
 msgid "%s account : %s"
-msgstr ""
+msgstr "%s ఖాతా : %s"
 
 #: ../gnome/src/sflnotify.c:103
 #, c-format
@@ -831,7 +832,7 @@ msgstr ""
 
 #: ../gnome/src/mainwindow.c:429 ../gnome/src/mainwindow.c:457
 msgid "Continue"
-msgstr ""
+msgstr "కొనసాగించు"
 
 #: ../gnome/src/mainwindow.c:430 ../gnome/src/mainwindow.c:458
 #: ../gnome/src/mainwindow.c:476
@@ -862,7 +863,7 @@ msgstr ""
 
 #: ../gnome/src/mainwindow.c:474
 msgid "Confirm"
-msgstr ""
+msgstr "నిర్ధారించు"
 
 #: ../gnome/src/eel-gconf-extensions.c:73
 msgid ""
@@ -885,7 +886,7 @@ msgstr ""
 
 #: ../gnome/src/accountlist.c:162
 msgid "Authentication Failed"
-msgstr ""
+msgstr "అధీకరణ విఫలమైంది"
 
 #: ../gnome/src/accountlist.c:165
 msgid "Network unreachable"
@@ -958,7 +959,7 @@ msgstr ""
 
 #: ../gnome/src/uimanager.c:494
 msgid "About SFLphone"
-msgstr ""
+msgstr "SFLphone గురించి"
 
 #: ../gnome/src/uimanager.c:947 ../gnome/src/uimanager.c:992
 msgid "Voicemail"
@@ -1031,7 +1032,7 @@ msgstr ""
 
 #: ../gnome/src/uimanager.c:994
 msgid "_Close"
-msgstr ""
+msgstr "మూసివేయి (_C)"
 
 #: ../gnome/src/uimanager.c:995
 msgid "Minimize to system tray"
@@ -1091,7 +1092,7 @@ msgstr ""
 
 #: ../gnome/src/uimanager.c:1011
 msgid "_Accounts"
-msgstr ""
+msgstr "ఖాతాలు (_A)"
 
 #: ../gnome/src/uimanager.c:1012
 msgid "Edit your accounts"
@@ -1099,7 +1100,7 @@ msgstr ""
 
 #: ../gnome/src/uimanager.c:1013
 msgid "_Preferences"
-msgstr ""
+msgstr "అభీష్టాలు (_P)"
 
 #: ../gnome/src/uimanager.c:1014
 msgid "Change your preferences"
@@ -1111,7 +1112,7 @@ msgstr ""
 
 #: ../gnome/src/uimanager.c:1021
 msgid "_Help"
-msgstr ""
+msgstr "సహాయం (_H)"
 
 #: ../gnome/src/uimanager.c:1022
 msgid "Contents"
@@ -1167,7 +1168,7 @@ msgstr ""
 
 #: ../gnome/src/uimanager.c:1036
 msgid "_History"
-msgstr ""
+msgstr "చరిత్ర (_H)"
 
 #: ../gnome/src/uimanager.c:1036
 msgid "Calls history"
@@ -1199,7 +1200,7 @@ msgstr ""
 
 #: ../gnome/src/actions.c:172
 msgid "No registered accounts"
-msgstr ""
+msgstr "నమోదైన ఖాతాలు లేవు"
 
 #: ../gnome/src/actions.c:596 ../gnome/src/actions.c:867
 msgid "Direct SIP call"
@@ -1217,5 +1218,13 @@ msgstr ""
 #, c-format
 msgid "%i active account"
 msgid_plural "%i active accounts"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%i క్రియాశీల ఖాతా"
+msgstr[1] "%i క్రియాశీల ఖాతాలు"
+
+#~ msgctxt "NAME OF TRANSLATORS"
+#~ msgid "Your names"
+#~ msgstr " ,Launchpad Contributions:,వీవెన్ (Veeven)"
+
+#~ msgctxt "EMAIL OF TRANSLATORS"
+#~ msgid "Your emails"
+#~ msgstr ",,"
