--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@
 # SFLphone
 ################################################
 
+* 2011-09-30: 1.0.0 has been released
+
 * 2010-04-09: 0.9.8 rc1 has been released
 
 * 2010-03-25: 0.9.8 beta has been released
