* #7242: updated version numbers for release 1.0.1

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@
 # SFLphone
 ################################################
 
+* 2011-11-18: 1.0.1 has been released
+
 * 2011-09-30: 1.0.0 has been released
 
 * 2010-04-09: 0.9.8 rc1 has been released
