Fix invalid date format in Debian changelog

--- a/tools/build-system/launchpad/mozilla-telify-sflphone/debian/changelog
+++ b/tools/build-system/launchpad/mozilla-telify-sflphone/debian/changelog
@@ -3,7 +3,7 @@ mozilla-telify-sflphone (1.0) unstable; urgency=low
   [ Julien Bonjean ]
   * Package update
 
- -- Julien Bonjean <julien.bonjean@savoirfairelinux.com>  Fri, 21 Avr 2010 19:51:54 +0100
+ -- Julien Bonjean <julien.bonjean@savoirfairelinux.com>  Fri, 21 Apr 2010 19:51:54 +0100
 
 mozilla-telify-sflphone (0.4.7.3) unstable; urgency=low
 
